--- a/examples/text_summarization/requirements.txt
+++ b/examples/text_summarization/requirements.txt
@@ -4,5 +4,5 @@ sentencepiece
 torch>=1.7.0,!=1.8.0
 transformers==4.16.2
 #pytorch-lightning>=1.8.0
-git+https://github.com/Lightning-AI/lightning.git
+lightning>=1.8.2
 scikit-learn
