update from trial

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [metadata]
-name = llm-components
+name = lai-tldr
 version = 0.0.1
-description = LAI components for running LLM training and inference in the cloud
+description = LAI components for training text summarization
 long_description = file: README.md
 author = Lightning-AI
-url = https://github.com/Lightning-AI/LAI-LLM-components
+url = https://github.com/Lightning-AI/LAI-TLDR
 classifiers =
     Programming Language :: Python :: 3
 keywords = deep learning, machine learning, pytorch, AI
 project_urls =
-    source = https://github.com/Lightning-AI/LAI-LLM-components
-    tracker = https://github.com/Lightning-AI/LAI-LLM-components/issues
+    source = https://github.com/Lightning-AI/LAI-TLDR
+    tracker = https://github.com/Lightning-AI/LAI-TLDR/issues
 
 [options]
 zip_safe = False
