--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,12 @@ zip_safe = False
 include_package_data = True
 packages = find:
 python_requires = >=3.7
+install_requires =
+    pandas
+    numpy
+    sentencepiece
+    transformers==4.16.2
+    scikit-learn
 
 [options.packages.find]
 exclude =
