--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test Text Classification
+name: Test Text Summarization
 
 # see: https://help.github.com/en/actions/reference/events-that-trigger-workflows
 on:
