--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     sentencepiece
     transformers==4.16.2
     scikit-learn
+    deepspeed
 
 [options.packages.find]
 exclude =
