--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
     transformers==4.16.2
     scikit-learn
     deepspeed
+    tensorboard
 
 [options.packages.find]
 exclude =
