--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,9 @@ exclude =
 
 [bdist_wheel]
 universal = 1
+
+[flake8]
+ignore = W503,E203,C901
+max-line-length = 120
+exclude = tests/*,mingpt/*,nanogpt/*
+max-complexity = 10
