--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
           )
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: 5.12.0
     hooks:
       - id: isort
         args: [--profile, black]
@@ -92,3 +92,7 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+        exclude: |
+          (?x)(
+              app.py
+          )
