--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ project_urls =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
     pandas
     numpy
@@ -24,6 +24,7 @@ install_requires =
     transformers==4.16.2
     scikit-learn
     deepspeed
+    tensorboard
 
 [options.packages.find]
 exclude =
@@ -31,3 +32,9 @@ exclude =
 
 [bdist_wheel]
 universal = 1
+
+[flake8]
+ignore = W503,E203,C901
+max-line-length = 120
+exclude = tests/*,mingpt/*,nanogpt/*
+max-complexity = 10
