--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -2,4 +2,7 @@ coverage==6.5.0
 codecov==2.1.12
 pytest==7.2.0
 pytest-cov==4.0.0
+tensorboard
+git+https://github.com/Lightning-AI/lightning-LLMs
 lightning
+psutil
